# lidar_obstacle_detection

./: CMakeLists.txt  README.md  main  nodelet_plugins.xml  package.xml  rviz_plugins.xml
include/lidar_obstacle_detection/: detect.h
include/lidar_obstacle_detection/displays/: circle_visual.h  obstacles_display.h  segment_visual.h
include/lidar_obstacle_detection/panels/: detect_panel.h
launch/: pcl.launch
msg/: GDXBoxMessage.msg  GDXBoxesMessage.msg  TunningParam.msg  boxes.msg  pclarray.msg
resources/: lidar_obstacle_detector.rviz
src/: Listener.java  detect.cpp  main.cpp
src/displays/: circle_visual.cpp  obstacles_display.cpp  segment_visual.cpp
src/nodelets/: detect_nodelet.cpp
src/nodes/: detect_node.cpp
src/panels/: detect_panel.cpp
